maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:55: error: not found: value sommeAngle
  sommeAngle = sommeAngle + 1
  ^Escaper:58: error: not found: value sommeAngle
    sommeAngle = sommeAngle - 1
    ^Escaper:65: error: not found: value sommeAngle
    sommeAngle = sommeAngle - 1
    ^